# customer-churn-project

./: .dockerignore  .gitignore  Dockerfile  README.md  class.ipynb  main.py  model.joblib  pyproject.toml
